@@ -821,11 +821,6 @@ static void cmd_parse_status (IMAP_DATA* idata, char* s)
   int count;
   IMAP_STATUS *status, sb;
   int olduv, oldun;
-#if USE_HCACHE
-  header_cache_t *hc = NULL;
-  unsigned int *uidvalidity = NULL;
-  unsigned int *uidnext = NULL;
-#endif
 
   mailbox = imap_next_word (s);
   s = imap_next_word (mailbox);
@@ -911,24 +906,6 @@ static void cmd_parse_status (IMAP_DATA* idata, char* s)
         dprint (3, (debugfile, "Found %s in buffy list (OV: %d ON: %d U: %d)\n",
                     mailbox, olduv, oldun, status->unseen));
         
-#if USE_HCACHE
-	/* fetch seen info from hcache if we haven't seen it yet this session */
-	if (!olduv && !oldun)
-	{
-	  hc = mutt_hcache_open (HeaderCache, inc->path);
-	  if (hc)
-	  {
-	    uidvalidity = mutt_hcache_fetch_raw (hc, "/UIDVALIDITY", imap_hcache_keylen);
-	    uidnext = mutt_hcache_fetch_raw (hc, "/UIDNEXT", imap_hcache_keylen);
-	    olduv = uidvalidity ? *uidvalidity : 0;
-	    oldun = uidnext ? *uidnext : 0;
-	    FREE (&uidvalidity);
-	    FREE (&uidnext);
-	    mutt_hcache_close (hc);
-	    dprint (3, (debugfile, "hcache olduv %d, oldun %d\n", olduv, oldun));
-	  }
-	}
-#endif
         if (olduv && olduv == status->uidvalidity)
         {
           if (oldun < status->uidnext)
